# cb_quick_dashboard

./: .gitignore  README.md  README_RELEASE.md  README_TESTING.md  app.py  cb_dashboard.spec  config.json  config.test.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  setup.py  test_app.py  test_coverage_analysis.md  test_integration.py  test_scripts.js
.github/workflows/: build-and-release.yml
settings/: VERSION_GUIDE.md
static/css/: styles.css
static/js/: scripts.js
templates/: index.html
tests/: README.md  __init__.py  test_app.py  test_complete_coverage.py  test_integration.py
